--- a/image.ipynb
+++ b/image.ipynb
@@ -135,8 +135,6 @@
    ],
    "source": [
     "import cv2\n",
-    "import matplotlib.pyplot as plt\n",
-    "from pytesseract import image_to_string\n",
     "import pytesseract\n",
     "\n",
     "# Load the image in grayscale\n",
@@ -153,7 +151,7 @@
     "print(pytesseract.image_to_string(canny_edges))\n",
     "\n",
     "# Apply dilation to the edges\n",
-    "kernel = cv2.getStructuringElement(cv2.MORPH_RECT, (3,3))\n",
+    "kernel = cv2.getStructuringElement(cv2.MORPH_RECT, (3, 3))\n",
     "dilated_edges = cv2.dilate(canny_edges, kernel, iterations=1)\n",
     "show_image(dilated_edges,title='Image with dilation')\n",
     "print(\"Displaying text after applying dilation:\")\n",
@@ -248,10 +246,8 @@
     }
    ],
    "source": [
-    "from pytesseract.pytesseract import image_to_alto_xml\n",
     "import cv2\n",
     "import pytesseract\n",
-    "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "\n",
     "# Load the image\n",
@@ -264,15 +260,15 @@
     "# Normalization\n",
     "norm_img = np.zeros((img.shape[0], img.shape[1]))\n",
     "norm_img = cv2.normalize(img, norm_img, 0, 255, cv2.NORM_MINMAX)\n",
-    "show_image(norm_img,title='Normalized Image')\n",
+    "show_image(norm_img, title='Normalized Image')\n",
     "print(\"Displaying text after normalization:\")\n",
     "print(pytesseract.image_to_string(norm_img))\n",
     "\n",
-    "#Thinning and Skeletonization\n",
+    "#Erosion\n",
     "kernel = np.ones((2, 2),np.uint8)\n",
     "sk_img = cv2.erode(img, kernel, iterations = 1)\n",
-    "show_image(sk_img,title='Thinned and skeletonized Image')\n",
-    "print(\"Displaying text after thinning and skeletonization:\")\n",
+    "show_image(sk_img, title='Eroded Image')\n",
+    "print(\"Displaying text after erosion:\")\n",
     "print(pytesseract.image_to_string(sk_img))"
    ]
   },
@@ -300,7 +296,6 @@
    ],
    "source": [
     "from PIL import Image\n",
-    "from IPython.display import display\n",
     "\n",
     "# Open the image\n",
     "image_path = 'arabic.jpg'\n",
@@ -412,27 +407,28 @@
     }
    ],
    "source": [
-    "from PIL import Image, ImageEnhance\n",
+    "from PIL import ImageEnhance\n",
     "from PIL import ImageOps  # Add this import for ImageOps\n",
     "from pytesseract import image_to_string\n",
     "\n",
-    "show_image(original_image,title='Original Image')\n",
+    "show_image(original_image, title='Original Image')\n",
     "print(\"Displaying text using original image\")\n",
-    "text=image_to_string(original_image  ,lang='ara')\n",
+    "text=image_to_string(original_image, lang='ara')\n",
     "print(text)\n",
     "\n",
     "# Convert the original image to grayscale\n",
     "grayscale_image = original_image.convert('L')\n",
-    "show_image(grayscale_image,title='Grayscale Image')\n",
+    "show_image(grayscale_image, title='Grayscale Image')\n",
     "print(\"Displaying text using grayscale image\")\n",
-    "text=image_to_string(grayscale_image,lang='ara')\n",
+    "text=image_to_string(grayscale_image, lang='ara')\n",
     "print(text)\n",
     "\n",
     "\n",
-    "# Apply preprocessing, e.g., contrast enhancement (you can keep this part)\n",
+    "# Contrast enhancement\n",
     "enhancer = ImageEnhance.Contrast(grayscale_image)\n",
     "contrast_factor = 2.65\n",
     "enhanced_image = enhancer.enhance(contrast_factor)\n",
+    "\n",
     "# Convert the enhanced image to grayscale\n",
     "grayscale_enhanced_image = enhanced_image.convert('L')\n",
     "\n",
@@ -441,6 +437,7 @@
     "text=image_to_string(grayscale_enhanced_image,lang='ara')\n",
     "print(text)\n",
     "\n",
+    "# Binary Thresholding\n",
     "threshold_value = 47\n",
     "binary_image = ImageOps.grayscale(grayscale_enhanced_image).point(lambda p: 255 if p > threshold_value else 0)\n",
     "show_image(binary_image,title='Binary image')\n",
